--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
                     <textarea placeholder="Message" class="messageInput" ></textarea>
                     <input type="submit" value="Submit">
                 </div>
+                <img src="asset/img/css.png" alt="">
             </div>
             
         </div>
