--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </div>
     </div>
 
-    <section class="review">
+    <section class="review pb-5">
         <div class="cotainer m-5">
             <div class="row">
                 <div class="col-md-12">
@@ -198,7 +198,7 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container  pb-3">
             <div class="row">
                 <div class="col-md-4">
                     <div class="textBox">
@@ -250,6 +250,29 @@
         </div>
     </section>
 
+    <section class="partner">
+        <div class="container pt-4">
+           <div class="row">
+                <div class="col-md-4">
+                    <h1 class="">Our <span class="text-primary"> Technology</span> </h1>
+                    <p class="text-muted">Lorem ipsum is the best text  lorem  delevary lorem lorem ipsum is the </p>
+                </div>
+                <div class="col-md-2">
+                    <img src="asset/img/ad-removebg-preview.png" alt="" class="w-100">
+                </div>
+                <div class="col-md-2">
+                    <img src="asset/img/avdegic5l.webp" alt="" class="w-75">
+                </div>
+                <div class="col-md-2">
+                    <img src="asset/img/_129408815_mediaitem129408814.jpg" class="w-100" alt="">
+                </div>
+                <div class="col-md-2">
+                    <img src="asset/img/daraz_logo_latest.png" alt="" class="w-75">
+                </div>
+            
+           </div>
+        </div>
+    </section>
 
 
 
@@ -269,36 +292,8 @@
 
 
 
-    <div class="container overflow hidden">
-            <h1> Oveflow Hidden</h1>
-            <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-            <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-            <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-    </div>
-    <div class="container overflow visible ">
-        <h1> Oveflow visible</h1>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-    </div>
-    <div class="container overflow scroll ">
-        <h1> Oveflow Scroll</h1>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-        <h1> Oveflow Scroll</h1>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-    </div>
-    <div class="container overflow auto">
-        <h1> Oveflow auto</h1>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-        <h1> Oveflow auto</h1>
-        <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>    <p>lorem ispum is the the quick bron fox jumps over the lazy dog the quck brown fo xju</p>
-       
-    </div>
 
+ 
   
 
 
